aku lagi makan h4

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
         <h1> Belajar git untuk Pemula </h1>
+        <h2> latihan dari awal saja ya </h2>
+        <h3> perubahan teks baru </h3> 
   </body>
 </html>
