--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h2> latihan dari awal saja ya </h2>
         <h3> perubahan teks baru </h3>
         <h4> aku lagi makan </h4>
-        <h5> coba aku update ya </h5>
+        <h5> berubah semua </h5>
   </body>
 </html>
