pemula berubah jadi anak baru

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Latihan Membuat Website git</title>
   </head>
   <body>
-        <h1> Belajar git untuk Pemula </h1>
+        <h1> pemula berubah jadi anak baru </h1>
         <h2> latihan dari awal saja ya </h2>
         <h3> perubahan teks baru </h3>
         <h4> aku lagi makan </h4>
