--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Latihan Membuat Website git</title>
   </head>
   <body>
-        <h1> Rasa sayang he</h1>
+        <h1> Bismillahirahmanirahim he</h1>
         <h2> latihan dari awal saja ya </h2>
         <h3> Nama saya baru ya </h3>
         <h4> aku lagi makan </h4>
