Belajar ilmu baru lagi

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1> Bismillahirahmanirahim he</h1>
         <h2> latihan dari awal saja ya </h2>
         <h3> Nama saya baru ya </h3>
-        <h4> aku rubah lagi </h4>
+        <h4> belajar ilmu baru lagi </h4>
         <h5> lihat yang ada perubahan </h5>
   </body>
 </html>
