--- a/belajar.html
+++ b/belajar.html
@@ -3,9 +3,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Belajar membuat website baru</title>
   </head>
   <body>
-
+    <h1> Bismillahirahmanirahim he</h1>
   </body>
 </html>
